--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,9 @@ jobs:
         run: |
           echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: 📂 Debug
+      - name: 🛑 Para containers antigos
         run: |
-          pwd
-          ls -la
-          find . -name "Dockerfile" 2>/dev/null
+          docker compose down || true
 
       - name: 🏗️ Build da imagem
         run: |
@@ -35,28 +33,27 @@ jobs:
         run: |
           docker push ghcr.io/o-orion/pratica-dock:latest
 
-      - name: 🛑 Remove container antigo
+      - name: 📝 Cria o .env na VM
         run: |
-          docker stop pratica-dock || true
-          docker rm pratica-dock || true
+          cat > .env << EOF
+          DB_HOST=postgres
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_USER=${{ secrets.DB_USER }}
+          DB_PASS=${{ secrets.DB_PASS }}
+          DB_NAME=${{ secrets.DB_NAME }}
+          NODE_ENV=production
+          PORT=6060
+          JWT_ACCESS_SECRET=${{ secrets.JWT_ACCESS_SECRET }}
+          JWT_ACCESS_EXPIRATION=15m
+          JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
+          JWT_REFRESH_EXPIRATION=7d
+          EOF
 
-      - name: 🚀 Sobe novo container
+      - name: 🚀 Sobe com Docker Compose
         run: |
-          docker run -d \
-            --name pratica-dock \
-            --network fullstack-indt \
-            -p 6060:6060 \
-            -e DB_HOST=${{ secrets.DB_HOST }} \
-            -e DB_PORT=${{ secrets.DB_PORT }} \
-            -e DB_USER=${{ secrets.DB_USER }} \
-            -e DB_PASS=${{ secrets.DB_PASS }} \
-            -e DB_NAME=${{ secrets.DB_NAME }} \
-            -e NODE_ENV=production \
-            -e JWT_ACCESS_SECRET="${{ secrets.JWT_ACCESS_SECRET }}" \
-            -e JWT_REFRESH_SECRET="${{ secrets.JWT_REFRESH_SECRET }}" \
-            ghcr.io/o-orion/pratica-dock:latest
+          docker compose up -d --build
 
       - name: ✅ Verifica se subiu
         run: |
-          sleep 5
-          docker ps | grep pratica-dock
+          sleep 10
+          docker compose ps
